change flyout behavior to appear below the entry when escaping the grid at the top

--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -49,7 +49,7 @@
 .schedule-container {
   flex: 1 1 auto;
   display: flex;
-  overflow: visible;
+  overflow: auto;
 
   .calendar {
     flex: 1 1 auto;
