adjust style for starts on text

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -125,7 +125,8 @@
           font-weight: bold;
         }
         .rotation-info-member-count,
-        .rotation-info-mode {
+        .rotation-info-mode,
+        .rotation-info-start{
           color: @gray;
         }
 
