adjsut rotation-info layout for minimal and poor layouts

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -69,15 +69,19 @@
           display: none;
           position: absolute;
           bottom: 120%;
-          width: auto;
+          width: max-content;
+          max-width: 30em;
           height: auto;
           padding: 0.5em;
-          background-color: @body-bg-color;
-          border: 1px solid @gray-light;
-          border-radius: 4px;
+          left: 0;
+          transform: translate(~"calc(-1em + 2px)");
+          flex-direction: column;
           white-space: nowrap;
-          left: 10%;
-          transform: translateX(-10%);
+
+          .rotation-info-time{
+            flex-direction: column;
+            display: flex;
+          }
 
           &:before {
             content: '';
@@ -85,23 +89,21 @@
             display: inline-block;
             width: 1em;
             height: 1em;
-            left: ~"max(10%, 1em)";
+            left: 0.5em;
             bottom: ~"calc(-0.5em - 1px)";
-            border-right: 1px solid @gray-light;
-            border-bottom: 1px solid @gray-light;
             background-color: @body-bg-color;
-            transform: translateX(-50%) rotate(45deg);
+            transform: rotate(45deg);
           }
 
           &.is-left {
             left: auto;
-            right: 10%;
-            transform: translateX(10%);
+            right: 100%;
+            transform: translate(~"calc(1em + 2px)");
 
             &:before {
               left: auto;
-              right: ~"max(10%, 1em)";
-              transform: translateX(50%) rotate(45deg);
+              right: 0.5em;
+              transform: rotate(45deg);
             }
           }
 
@@ -112,29 +114,20 @@
             &:before {
               bottom: auto;
               top: ~"calc(-0.5em - 1px)";
-              transform: translateX(-50%) rotate(225deg);
+              transform: rotate(225deg);
             }
 
             &.is-left:before {
-              transform: translateX(50%) rotate(225deg);
+              transform: rotate(225deg);
             }
           }
-        }
-
-        .rotation-info-name {
-          font-weight: bold;
-        }
-        .rotation-info-member-count,
-        .rotation-info-mode,
-        .rotation-info-start{
-          color: @gray;
         }
 
         &:hover {
           mix-blend-mode: normal;
           .rotation-info {
             z-index: 1;
-            display: block;
+            display: flex;
           }
         }
       }
@@ -311,6 +304,17 @@
   }
 }
 
+#layout.minimal-layout,
+#layout.poor-layout,
+#layout.twocols:not(.wide-layout) {
+  .rotation-info{
+    .days-interval-wrapper{
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
+
 /* Design */
 
 .timeline {
@@ -386,6 +390,30 @@
         .button(@gray-lighter);
       }
     }
+  }
+
+  .rotation-info{
+    background-color: @body-bg-color;
+    border: 1px solid @gray-light;
+    border-radius: 4px;
+
+    &:before{
+      border-right: 1px solid @gray-light;
+      border-bottom: 1px solid @gray-light;
+    }
+  }
+
+  .rotation-info-name {
+    font-weight: bold;
+  }
+  .rotation-info-member-count,
+  .rotation-info-mode,
+  .rotation-info-start{
+    color: @gray;
+    font-weight: normal;
+  }
+  .rotation-info-start time{
+    color: @default-text-color;
   }
 }
 
