remove flyouts from minimal timeline layout and Member on duty to the flyout

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -450,6 +450,14 @@
   .rotation-info-start time {
     color: @default-text-color;
   }
+
+  .rotation-info-on-duty {
+    color: @gray;
+  }
+
+  .rotation-info-active-member-name {
+    color: @default-text-color;
+  }
 }
 
 .timeline .empty-notice {
