Notify-state: Highlight failed notify attempt for better visibility
- Apply css classes and increase css specificity

--- a/public/css/detail/incident-detail.less
+++ b/public/css/detail/incident-detail.less
@@ -25,7 +25,13 @@
     }
   }
 
-  .list-item.notification-suppressed {
-    opacity: .75;
+  .list-item.incident-history.notification-state {
+    &.suppressed {
+      opacity: .75;
+    }
+
+    &.failed .state-text {
+      color: @color-critical;
+    }
   }
 }
