Add EntryFlyout widget that is responsible for assembling the entrie's flyoutmenu

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -442,20 +442,16 @@
 
   .rotation-info-member-count,
   .rotation-info-mode,
-  .rotation-info-start {
-    color: @gray;
+  .rotation-info-start,
+  .rotation-info-on-duty,
+  .rotation-info-members {
+    color: @text-color-light;
     font-weight: normal;
   }
 
-  .rotation-info-start time {
-    color: @default-text-color;
-  }
-
-  .rotation-info-on-duty {
-    color: @gray;
-  }
-
-  .rotation-info-active-member-name {
+  .rotation-info-start time,
+  .rotation-info-active-member-name,
+  .rotation-info-member-list {
     color: @default-text-color;
   }
 }
