move schedule-controls into controls section

--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -8,17 +8,9 @@
   h2 {
     display: inline;
   }
-}
 
-.schedule-detail {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-
-  .schedule-header {
-    display: flex;
-    margin-bottom: 1em;
-    justify-content: flex-end;
+  .schedule-controls {
+    float: right;
 
     .view-mode-switcher {
       margin-bottom: 0;
@@ -29,6 +21,12 @@
       }
     }
   }
+}
+
+.schedule-detail {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
   .from-scratch-hint {
     display: flex;
