add a delay before showing the flyout

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -143,10 +143,8 @@
               transform: rotate(225deg);
             }
           }
-        }
 
-        &:hover {
-          .rotation-info {
+          &.entry-is-hovered {
             z-index: 1;
             display: flex;
           }
