--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -161,6 +161,7 @@
         justify-content: end;
         z-index: 2; // overlap the .clock .time-hand
         pointer-events: all;
+        overflow: hidden;
 
         > div {
           margin-top: 1em;
