FutureEntry: hide overflow

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -156,6 +156,7 @@
         justify-content: end;
         z-index: 2; // overlap the .clock .time-hand
         pointer-events: all;
+        overflow: hidden;
 
         > div {
           margin-top: 1em;
